# design-patterns

./: README.md
.cursor/: SETUP.md  comportamento.md  javascript-rules-md  rules  user-rules-flutter.md  user-rules-geral.md  user-rules-javascript.md  user-rules-php.md
boilerplate-laravel/.cursor/: rules
boilerplate-laravel/app/: helpers.php
boilerplate-laravel/app/Models/: Carro.php
boilerplate-laravel/app/Queries/Carro/: Queries.php
boilerplate-laravel/app/Services/Api/Carro/: Service.php
boilerplate-laravel/app/Services/Carro/: Service.php
boilerplate-laravel/database/migrations/: 2026_05_08_000000_create_carros_table.php
boilerplate-laravel/docs/features/carro/: specs.md
boilerplate-python/: README.md  pyproject.toml
boilerplate-python/.cursor/: rules
boilerplate-python/app/: __init__.py  database.py  helpers.py
boilerplate-python/app/models/: __init__.py  base.py  carro.py
boilerplate-python/app/queries/carro/: __init__.py  queries.py
boilerplate-python/app/services/api/carro/: __init__.py  service.py
boilerplate-python/app/services/carro/: __init__.py  service.py
boilerplate-python/database/migrations/: 2026_05_08_000000_create_carros.sql
boilerplate-python/docs/features/carro/: specs.md
