[project]
name = "boilerplate-python"
version = "0.1.0"
description = "Boilerplate Python espelhando a estrutura SRP do boilerplate Laravel (queries + services)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy>=2.0.0",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
